update image sources

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <!-- Header -->
   <header>
     <div id="logo">
-      <!-- <h1 class="cinemalizer"><a href="index.html"><img src="../media/cinemalizer-logo-v2.svg" alt="Cinemalizer logo"></a></h1> -->
+      <!-- <h1 class="cinemalizer"><a href="index.html"><img src="./media/cinemalizer-logo-v2.svg" alt="Cinemalizer logo"></a></h1> -->
       <h1>Cinemalizer</h1>
     </div>
 
     <div id="menuToggler">≡</div> <!-- TODO: Use other menu icon inside media folder -->
     <nav id="menu">
       <div id="links">
-        <a href="https://www.linkedin.com/in/erica-thuet/" title="LinkedIn profile link" target="_blank"><img src="../media/linkedin-logo.png" alt="LinkedIn logo"></a>
-        <a href="https://github.com/erica63" title="GitHub profile link" target="_blank"><img src="../media/github-logo.png" alt="GitHub logo"></a>
-        <a href="https://d3js.org/" title="D3.JS website link" target="_blank"><img src="../media/d3js-logo.png" alt="D3.JS logo"></a>
-        <a href="https://imdb-api.com/" title="ImDb api link" target="_blank"><img src="../media/imdb-logo.png" alt="ImDb logo"></a>
+        <a href="https://www.linkedin.com/in/erica-thuet/" title="LinkedIn profile link" target="_blank"><img src="./media/linkedin-logo.png" alt="LinkedIn logo"></a>
+        <a href="https://github.com/erica63" title="GitHub profile link" target="_blank"><img src="./media/github-logo.png" alt="GitHub logo"></a>
+        <a href="https://d3js.org/" title="D3.JS website link" target="_blank"><img src="./media/d3js-logo.png" alt="D3.JS logo"></a>
+        <a href="https://imdb-api.com/" title="ImDb api link" target="_blank"><img src="./media/imdb-logo.png" alt="ImDb logo"></a>
       </div>
       <ul>
         <li class="active"><a href="index.html">Home</a></li>
@@ -38,9 +38,9 @@
         <h3>With dynamic data visualizations</h3>
       </div>
       <div class="picture-content">
-        <img src="../media/popcorn-bubble-chart.png">
-        <!-- <img src="../media/popcorn1.png"> -->
-        <button id="get-started"><a href="interact.html">Get started</a><img src="../media/arrow.svg"</button>
+        <img src="./media/popcorn-bubble-chart.png">
+        <!-- <img src="./media/popcorn1.png"> -->
+        <button id="get-started"><a href="interact.html">Get started</a><img src="./media/arrow.svg"</button>
       </div>
     </div>
   </section>
@@ -52,32 +52,32 @@
     </div>
     <div class="row">
       <div class="features-card">
-        <img src="../media/features-ratings.svg">
+        <img src="./media/features-ratings.svg">
         <h3>Ratings</h3>
         <p>An abundance of reviews from IMDB, Metacritic and more.</p>
       </div>
       <div class="features-card">
-        <img src="../media/features-genres.svg">
+        <img src="./media/features-genres.svg">
         <h3>Genres</h3>
         <p>Browse movie data for mystery, horror, or comedy.</p>
       </div>
       <div class="features-card">
-        <img src="../media/features-coming-soon.svg">
+        <img src="./media/features-coming-soon.svg">
         <h3>Coming Soon</h3>
         <p>See which new movies are coming soon.</p>
       </div>
       <div class="features-card">
-        <img src="../media/features-posters.svg">
+        <img src="./media/features-posters.svg">
         <h3>Posters</h3>
         <p>See the movie posters on every data point.</p>
       </div>
       <div class="features-card">
-        <img src="../media/features-cast.svg">
+        <img src="./media/features-cast.svg">
         <h3>Cast</h3>
         <p>View the full cast of any movie.</p>
       </div>
       <div class="features-card">
-        <img src="../media/features-visualizations.svg">
+        <img src="./media/features-visualizations.svg">
         <h3>Visualizations</h3>
         <p>Most importantly, interactive charts.</p>
       </div>
@@ -103,10 +103,10 @@
     <h1>Cinemalizer</h1>
     <p>For movie lovers, made by a movie lover.</p>
     <div id="links">
-      <a href="https://www.linkedin.com/in/erica-thuet/" title="LinkedIn profile link" target="_blank"><img src="../media/linkedin-logo.png" alt="LinkedIn logo"></a>
-      <a href="https://github.com/erica63" title="GitHub profile link" target="_blank"><img src="../media/github-logo.png" alt="GitHub logo"></a>
-      <a href="https://d3js.org/" title="D3.JS website link" target="_blank"><img src="../media/d3js-logo.png" alt="D3.JS logo"></a>
-      <a href="https://imdb-api.com/" title="ImDb api link" target="_blank"><img src="../media/imdb-logo.png" alt="ImDb logo"></a>
+      <a href="https://www.linkedin.com/in/erica-thuet/" title="LinkedIn profile link" target="_blank"><img src="./media/linkedin-logo.png" alt="LinkedIn logo"></a>
+      <a href="https://github.com/erica63" title="GitHub profile link" target="_blank"><img src="./media/github-logo.png" alt="GitHub logo"></a>
+      <a href="https://d3js.org/" title="D3.JS website link" target="_blank"><img src="./media/d3js-logo.png" alt="D3.JS logo"></a>
+      <a href="https://imdb-api.com/" title="ImDb api link" target="_blank"><img src="./media/imdb-logo.png" alt="ImDb logo"></a>
     </div>
     <script src="movies-coming-soon.js"></script>
     <script src="menu.js"></script>
