--- a/interact.html
+++ b/interact.html
@@ -8,27 +8,28 @@
   <script src="d3.v7.js"></script>
 </head>
 
-<!-- Header -->
-<header>
-  <div id="logo">
-    <!-- <h1 class="cinemalizer"><a href="index.html"><img src="../media/cinemalizer-logo-v2.svg" alt="Cinemalizer logo"></a></h1> -->
-    <h1>Cinemalizer</h1>
-  </div>
-
-  <div id="menuToggler">≡</div> <!-- TODO: Use other menu icon inside media folder -->
-  <nav id="menu">
-    <div id="links">
-      <a href="https://www.linkedin.com/in/erica-thuet/" title="LinkedIn profile link" target="_blank"><img src="../media/linkedin-logo.png" alt="LinkedIn logo"></a>
-      <a href="https://github.com/erica63" title="GitHub profile link" target="_blank"><img src="../media/github-logo.png" alt="GitHub logo"></a>
-      <a href="https://d3js.org/" title="D3.JS website link" target="_blank"><img src="../media/d3js-logo.png" alt="D3.JS logo"></a>
-      <a href="https://imdb-api.com/" title="ImDb api link" target="_blank"><img src="../media/imdb-logo.png" alt="ImDb logo"></a>
+<body>
+  <!-- Header -->
+  <header>
+    <div id="logo">
+      <!-- <h1 class="cinemalizer"><a href="index.html"><img src="./media/cinemalizer-logo-v2.svg" alt="Cinemalizer logo"></a></h1> -->
+      <h1>Cinemalizer</h1>
     </div>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li class="active"><a href="interact.html">Interact</a></li>
-    </ul>
-  </nav>
-</header>
+
+    <div id="menuToggler">≡</div> <!-- TODO: Use other menu icon inside media folder -->
+    <nav id="menu">
+      <div id="links">
+        <a href="https://www.linkedin.com/in/erica-thuet/" title="LinkedIn profile link" target="_blank"><img src="./media/linkedin-logo.png" alt="LinkedIn logo"></a>
+        <a href="https://github.com/erica63" title="GitHub profile link" target="_blank"><img src="./media/github-logo.png" alt="GitHub logo"></a>
+        <a href="https://d3js.org/" title="D3.JS website link" target="_blank"><img src="./media/d3js-logo.png" alt="D3.JS logo"></a>
+        <a href="https://imdb-api.com/" title="ImDb api link" target="_blank"><img src="./media/imdb-logo.png" alt="ImDb logo"></a>
+      </div>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="interact.html">Interact</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <section id="bubble-chart">
     <div class="row">
@@ -67,10 +68,10 @@
       <h1>Cinemalizer</h1>
       <p>For movie lovers, made by a movie lover.</p>
       <div id="links">
-        <a href="https://www.linkedin.com/in/erica-thuet/" title="LinkedIn profile link" target="_blank"><img src="../media/linkedin-logo.png" alt="LinkedIn logo"></a>
-        <a href="https://github.com/erica63" title="GitHub profile link" target="_blank"><img src="../media/github-logo.png" alt="GitHub logo"></a>
-        <a href="https://d3js.org/" title="D3.JS website link" target="_blank"><img src="../media/d3js-logo.png" alt="D3.JS logo"></a>
-        <a href="https://imdb-api.com/" title="ImDb api link" target="_blank"><img src="../media/imdb-logo.png" alt="ImDb logo"></a>
+        <a href="https://www.linkedin.com/in/erica-thuet/" title="LinkedIn profile link" target="_blank"><img src="./media/linkedin-logo.png" alt="LinkedIn logo"></a>
+        <a href="https://github.com/erica63" title="GitHub profile link" target="_blank"><img src="./media/github-logo.png" alt="GitHub logo"></a>
+        <a href="https://d3js.org/" title="D3.JS website link" target="_blank"><img src="./media/d3js-logo.png" alt="D3.JS logo"></a>
+        <a href="https://imdb-api.com/" title="ImDb api link" target="_blank"><img src="./media/imdb-logo.png" alt="ImDb logo"></a>
       </div>
       <script src="charts.js"></script>
       <script src="menu.js"></script>
