implement on click of a bubble show more movie details

--- a/interact.html
+++ b/interact.html
@@ -57,8 +57,7 @@
     <div class="movie-container">
       <p>
         To see more information on a movie, click on one of the bubbles in the chart
-        above and this section will be automatically updated with that movie's
-        information.
+        above.
       </p>
     </div>
   </section>
