fix coming soon section glitch, add scrollIntoView for bubble click

--- a/interact.html
+++ b/interact.html
@@ -62,7 +62,7 @@
     </div>
   </section>
 
-  <footer>
+  <footer id="footer">
     <div class="footer-content">
       <h1>Cinemalizer</h1>
       <p>For movie lovers, made by a movie lover.</p>
