delete few files and adjust trailer position in mobile view

--- a/interact.html
+++ b/interact.html
@@ -16,7 +16,7 @@
       <h1>Cinemalizer</h1>
     </div>
 
-    <div id="menuToggler">≡</div> <!-- TODO: Use other menu icon inside media folder -->
+    <div id="menuToggler">≡</div>
     <nav id="menu">
       <div id="links">
         <a href="https://www.linkedin.com/in/erica-thuet/" title="LinkedIn profile link" target="_blank"><img src="./media/linkedin-logo.png" alt="LinkedIn logo"></a>
